--- a/src/app/views/list/list.component.html
+++ b/src/app/views/list/list.component.html
@@ -2,10 +2,6 @@
 
 <img [src]="pkmSprite" class="selected-pkm" *ngIf="selectedPkm !== null"  >
 
-
 <ul class="poke-list" >
-  <li class="poke-list-item" *ngFor="let pokemon of pokemonList" (mouseenter)="selectPokemon(pokemon)" >
-    <img src="//serebii.net/pokedex-xy/icon/{{ pokemon.number | number:'3.0-0' }}.png" >
-    <span>{{ pokemon.number | number:'3.0-0' }} - {{ pokemon.name }}</span>
-  </li>
+  <app-list-item *ngFor="let pokemon of pokemonList" [pokemon]="pokemon" (mouseenter)="selectPokemon(pokemon)"></app-list-item>
 </ul>
