--- a/src/app/components/list-item/list-item.component.html
+++ b/src/app/components/list-item/list-item.component.html
@@ -1,4 +1,4 @@
 <li class="poke-list-item">
-  <img src="//serebii.net/pokedex-xy/icon/{{ pokemon.number | number:'3.0-0' }}.png" >
+  <img src="//serebii.net/pokedex-xy/icon/{{ pokemon.number | myNumber }}.png" >
   <span>{{ pokemon.number | myNumber }} - {{ pokemon.name }}</span>
 </li>
